# kubecc

./: .codecov.yml  .dockerignore  .gitignore  .gitpod.yml  .stignore  CMakeLists.txt  Makefile  PROJECT  README.md  Tiltfile  bake.hcl  gen-proto.sh  go.mod  go.sum  magefile.go  main.go
.github/workflows/: build.yml  go.yml
agent/: config.go  local.go  main.go  remote.go  root.go  scheduler.go
agent/cmd/: root.go  run.go
api/v1alpha1/: buildcluster_types.go  groupversion_info.go  kubecc_types.go  toolchain_types.go  zz_generated.deepcopy.go
cc/: args.go  args_test.go  filename.go  run.go
client/: distcc_embed_amd64.go  distcc_embed_arm64.go  main.go  pkg.sh  pkged.go
cmd/agent/: config.go  local.go  main.go  net.go  remote.go  root.go  run.go  schedclient.go  server.go  util.go
cmd/consumer/: config.go  consumer.go  dispatch.go  exec.go  follower.go  leader.go  main.go
cmd/consumerd/: analysis.go  daemon.go  main.go  runner.go
cmd/kcctl/: main.go
cmd/kubecc/: main.go  root.go  run.go  tool.go
cmd/make/: main.go  make
cmd/manager/: main.go
cmd/monitor/: main.go
cmd/scheduler/: config.go  linkerd.go  main.go  monitor.go  rand_direct.go  resolver.go  roundrobin.go  rr_dns.go  scheduler.go  server.go  task.go  types.go  watcher.go
compiler/: args.go  args_test.go  dotd.go  filename.go  preprocess.go  set.go
config/certmanager/: certificate.yaml
config/crd/: kustomization.yaml
config/default/: kustomization.yaml  manager_auth_proxy_patch.yaml  manager_config_patch.yaml
config/manager/: controller_manager_config.yaml  kustomization.yaml  manager.yaml
config/prometheus/: monitor.yaml
config/rbac/: auth_proxy_role_binding.yaml  auth_proxy_service.yaml  buildcluster_editor_role.yaml  buildcluster_viewer_role.yaml  kustomization.yaml  leader_election_role_binding.yaml  role.yaml  role_binding.yaml  toolchain_editor_role.yaml  toolchain_viewer_role.yaml  user_namespace.yaml
config/samples/: _v1alpha1_buildcluster.yaml  _v1alpha1_kubecc.yaml  _v1alpha1_toolchain.yaml  kustomization.yaml  namespace.yaml
controllers/: buildcluster_controller.go  buildcluster_controller_test.go  kubecc_controller.go  suite_test.go  toolchain_controller.go
controllers/kubecc/: controller.go  factory.go  kubecc_controller.go  reconcile.go
controllers/resolvers/: agent_spec.go
docs/: CNAME
hack/: boilerplate.go.txt  kind-with-registry.sh  make-snippets.go  port-forward-config.yaml  port-forward.sh  prepend-licenses.sh  prometheus-test-config.yaml  run-minio-test.sh  run-prometheus-test.sh  snippets.yaml
images/agent/: Dockerfile
images/environment/: Dockerfile  Dockerfile.opensuse  Dockerfile.ubuntu
images/kubecc/: Dockerfile
images/manager/: Dockerfile
images/mgr/: Dockerfile
images/monitor/: Dockerfile
images/operator/: Dockerfile
images/scheduler/: Dockerfile
images/tilt/: Dockerfile
internal/consumer/: config.go  logging.go
internal/lll/: component.go  functions.go  lll.go  log.go
internal/logkc/: log.go
internal/meta/: component.go
internal/sleep/: finder.go  querier.go
internal/testutil/: ginkgo.go  norace.go  querier.go  race.go  racedetector.go  skip.go  test_toolchain.go  testpb.pb.go  testpb_grpc.pb.go  testutil.pb.go  testutil.proto  testutil_grpc.pb.go  toolchain.go
internal/zapkc/: color.go  encoder.go  encoder_test.go  zapkc_suite_test.go
mgr/: Dockerfile  Makefile  gen-proto.sh  go.mod  go.sum  main.go
mgr/api/: api.pb.go  api.proto
operator/: Dockerfile  Makefile  PROJECT  go.mod  go.sum  main.go
operator/controllers/: distcc_controller.go  suite_test.go
pkg/cachesrv/: cachesrv_suite_test.go
pkg/cc/: args.go  args_test.go  cc_suite_test.go  compile.go  errors.go  filename.go  filename_test.go  finder.go  preprocess.go  run.go
pkg/clients/: availability.go  availability_test.go  clients_suite_test.go  keyedbuffer.go  listener.go  metrics.go  monitor.go  monitor_test.go  noop.go  provider.go  scheduler.go  stream.go
pkg/cluster/: agentctx.go  agentctx_integration.go  downward_api.go
pkg/config/: config.go  spec.go
pkg/consumer/: path_search.go
pkg/consumerd/: consumerd_suite_test.go  queue_test.go  server_test.go
pkg/control/: bind.go  factory.go  reconcile.go  recutil.go
pkg/cpuconfig/: cpuconfig.go
pkg/host/: cpu.go  hardware.go  limits.go  sysfs.go  sysinfo.go  validation.go
pkg/identity/: providers.go
pkg/kubecc/: root.go
pkg/meta/: context.go  impl.go  interceptors.go  meta_suite_test.go  meta_test.go  metadata.go  providers.go
pkg/metrics/: completers.go  keyedbuffer.go  listener.go  metrics.pb.go  metrics.proto  metrics_suite_test.go  noop.go  provider.go  status.go  status_test.go  types.go
pkg/monitor/: prometheus.go  store.go  store_test.go
pkg/rec/: compare.go  creators.go  find.go  find_or_create.go  object_creator.go  resolver.go  util.go
pkg/resolvers/: agent.go  (+7 more)
proto/: testpb.proto  types.proto
staging/: generate.sh  staging.go  staging_autogen.yaml
test/: test-args.txt
types/: set.go  types.pb.go  types.proto
(+378 files in other folders)
